<resources>
    <string name="app_name">TutorApp</string>

    <!--Login page strings -->
    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="newAccount">Create an Account</string>
    <!-- login page  strings end -->

    <!--main view strings -->
    <string name="info">More Info</string>
    <string name="contact">Contact</string>
    <!-- end main view strings -->

    <!--options tab strings  -->
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="hint">*****</string>
    <string name="newpassword">New Password</string>
    <string name="confirmnewpassword">Confirm New Password</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="report">Report a Problem</string>
    <!-- options tab strings end -->

    <!-- Create account page strings -->
    <string name="createAcc">Create Account</string>
    <string name="passConfirm">Confirm Password: </string>
    <string name="passHint">*****</string>
    <string name="pass">Password:</string>
    <string name="badCrs">Bad Courses: </string>
    <string name="goodCrs">Good Courses: </string>
    <string name="crsGoodEx">Ex. English</string>
    <string name="crsBadEx">Ex. Math</string>
    <string name="email">Email: </string>
    <string name="emailHint">Ex. r@gmail.com</string>
    <string name="uName">Username: </string>
    <string name="uNameHint">Ex. Ryan123</string>
    <string name="name">Name: </string>
    <string name="nameHint">Ex. Ryan Mackay</string>
    <string name="btnCancel">Cancel</string>
    <string name="makeAcc">Make Account</string>
    <string name="userInfo">Thanks for making an account, if you have a sec go to edit profile in
        options to give your profile a description about you.</string>
    <!-- Create account page strings end here -->

    <!--edit profile page strings -->
    <string name="edit">Edit Profile</string>
    <string name="description">Description:</string>
    <string name="save">Save</string>
    <!-- edit profile page strings end here -->

    <!--validation strings-->
    <string name="invalName">Invalid Name</string>
    <string name="invalEmail">Invalid Email</string>
    <string name="invalGCrs">Invalid Good Course</string>
    <string name="invalBCrs">Invalid Bad Course</string>
    <string name="invalPWord">Password must contain at least one symbol, one digit, one capital
        letter, and a length of at least 6</string>
    <string name="passMatch">Passwords must match exactly</string>
    <!--validation strings end here -->

    <!--More Information Page Strings-->
    <string name="good">Adept Courses:</string>
    <string name="bad">Deficient Courses:</string>
    <!--More Information Page Strings end here -->

    <!--contact person text message -->
    <string name="sms">would like to help tutor you or be tutor by you, contact them at:</string>
    <string name="sent">Message Sent</string>
    <string name="fail">Message was NOT sent, try again.</string>
    <!--end of text message message-->

    <string name="tempdescrip">This is a temporary description to describe how fucking awesome
        this person is.  This is where the descrption would go if it existed. meaning if someone
        decided to go into edit profile and add a description.</string>
</resources>
