<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.armint.testtutor.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:text="@string/login"
        android:textColor="@color/text_black"
        android:id="@+id/logTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/userName"
        android:textColorHint="@color/text_hint"
        android:textSize="30dp"
        android:maxLength="20"
        android:id="@+id/userName"
        android:layout_below="@+id/logTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textSize="30dp"
        android:maxLength="20"
        android:textColorHint="@color/text_hint"
        android:id="@+id/password"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/userName"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="20dp"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:id="@+id/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newAccount"
        android:textColor="@color/new_acc"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:onClick="toAccount" />
</RelativeLayout>
