<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_more_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.armint.testtutor.MoreInfo">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/person"
            android:textSize="50sp"
            android:textColor="@color/text_black"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textSize="18sp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="20dp"
            android:text="@string/tempdescrip"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:text="@string/good"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/goodCourses"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:text="@string/bad" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:textSize="18sp"
                android:id="@+id/badCourses" />

        </TableRow>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:id="@+id/contact"
            android:layout_marginTop="21dp"
            android:text="@string/contact"/>
    </TableLayout>
</ScrollView>
